# rustic-ai

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
end2end/: package-lock.json
end2end/tests/: chat-area.spec.ts  prompt-area.spec.ts
src/: api.rs  app.rs  lib.rs  main.rs
src/app/components/: chat_area.rs  mod.rs  prompt_area.rs
src/model/: conversation.rs
style/: main.css  main.scss
